--- a/roles/arch/tasks/main.yml
+++ b/roles/arch/tasks/main.yml
@@ -12,7 +12,7 @@
   # - include_tasks: ../base/tasks/nano.yml
   # - include_tasks: ../base/tasks/fonts.yml
   # - include_tasks: git.yml
-  - include_tasks: system.yml
+  # - include_tasks: system.yml
   # - include_tasks: ../void/tasks/onedrive.yml
 
   - include_tasks: tilix_config.yml
