--- a/roles/arch/tasks/test.yml
+++ b/roles/arch/tasks/test.yml
@@ -5,9 +5,14 @@
   become_user: "{{ user }}"
   command:
     # chdir: /
-    cmd: "nitrogen /usr/share/wallpapers/arch.png"
+    cmd: "nitrogen --set-auto --save /usr/share/wallpapers/arch.png"
 
 - name: download qt5-webkit
+  get_url:
+    url: https://archive.archlinux.org/packages/q/qt5-webkit/qt5-webkit-5.212.0alpha4-18-x86_64.pkg.tar.zst
+    dest: /home/{{ user }}
+
+- name: install qt5-webkit
   pacman:
-    name: https://archive.archlinux.org/packages/q/qt5-webkit/qt5-webkit-5.212.0alpha4-18-x86_64.pkg.tar.zst
-    extra_args: -U
+    name: /home/{{ user }}/qt5-webkit-5.212.0alpha4-18-x86_64.pkg.tar.zst
+    state: present
