--- a/roles/arch/tasks/system.yml
+++ b/roles/arch/tasks/system.yml
@@ -50,3 +50,13 @@
   command:
     chdir: /home/{{ user }}
     cmd: "xdg-user-dirs-update"
+
+- name: download qt5-webkit
+  get_url:
+    url: https://archive.archlinux.org/packages/q/qt5-webkit/qt5-webkit-5.212.0alpha4-18-x86_64.pkg.tar.zst
+    dest: /home/{{ user }}
+
+- name: install qt5-webkit
+  pacman:
+    name: /home/{{ user }}/qt5-webkit-5.212.0alpha4-18-x86_64.pkg.tar.zst
+    state: present
