--- a/roles/puppetmaster/tasks/main.yml
+++ b/roles/puppetmaster/tasks/main.yml
@@ -6,4 +6,5 @@
   - include_tasks: services.yml
   - include_tasks: ../arch/tasks/tilix_config.yml
   - include_tasks: configs.yml
+  - include_tasks: r10k.yml
 
