--- a/roles/puppetmaster/tasks/main.yml
+++ b/roles/puppetmaster/tasks/main.yml
@@ -5,6 +5,6 @@
   # - include_tasks: packages.yml
   # - include_tasks: services.yml
   # - include_tasks: ../arch/tasks/tilix_config.yml
-  # - include_tasks: configs.yml
+  - include_tasks: configs.yml
   - include_tasks: r10k.yml
 
