--- a/roles/puppetmaster/tasks/main.yml
+++ b/roles/puppetmaster/tasks/main.yml
@@ -3,7 +3,7 @@
 - block:
   # - include_tasks: pre.yml
   # - include_tasks: packages.yml
-  # - include_tasks: services.yml
+  - include_tasks: services.yml
   # - include_tasks: ../arch/tasks/tilix_config.yml
   # - include_tasks: configs.yml
   - include_tasks: r10k.yml
