--- a/roles/puppetmaster/tasks/r10k.yml
+++ b/roles/puppetmaster/tasks/r10k.yml
@@ -1,12 +1,15 @@
 ---
-- name: install gem
-  shell: ansible-galaxy collection install community.general
+# - name: install gem
+#   shell: ansible-galaxy collection install community.general
+
+# - name: install r10k
+#   become: true
+#   gem:
+#     name: r10k
+#     state: latest
 
 - name: install r10k
-  become: true
-  gem:
-    name: r10k
-    state: latest
+  shell: /opt/puppetlabs/puppet/bin/gem install r10k
 
 - name: create r10k directory
   file:
