--- a/roles/puppetmaster/files/config
+++ b/roles/puppetmaster/files/config
@@ -41,11 +41,11 @@ bindsym $mod+Control+End exec --no-startup-id pactl set-sink-volume 0 -10% && $r
 bindsym $mod+Control+Delete exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 
 # Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
+#floating_modifier $mod
 
 # move tiling windows via drag & drop by left-clicking into the title bar,
 # or left-clicking anywhere into the window while holding the floating modifier.
-tiling_drag modifier titlebar
+#tiling_drag modifier titlebar
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
