--- a/roles/puppetmaster/tasks/main.yml
+++ b/roles/puppetmaster/tasks/main.yml
@@ -7,6 +7,7 @@
   # - include_tasks: ../arch/tasks/tilix_config.yml
   # - include_tasks: configs.yml
   # - include_tasks: r10k.yml
-  - include_tasks: ../base/tasks/fonts.yml
+  # - include_tasks: ../base/tasks/fonts.yml
+  - include_tasks: ../debian/tasks/nala.yml
 
 
