--- a/roles/puppetmaster/tasks/configs.yml
+++ b/roles/puppetmaster/tasks/configs.yml
@@ -69,7 +69,7 @@
 #     group: 'root'
 
 - name: edit i3status config file
-  become_user: root
+  become: true
   lineinfile:
     dest: /etc/i3status.conf
     state: present
@@ -77,7 +77,7 @@
     line: '#order += "ipv6"'
 
 - name: edit i3status config file
-  become_user: root
+  become: true
   lineinfile:
     dest: /etc/i3status.conf
     state: present
@@ -85,7 +85,7 @@
     line: '#order += "wireless _first_'
 
 - name: edit i3status config file
-  become_user: root
+  become: true
   lineinfile:
     dest: /etc/i3status.conf
     state: present
