--- a/roles/puppetmaster/tasks/configs.yml
+++ b/roles/puppetmaster/tasks/configs.yml
@@ -71,7 +71,7 @@
 - name: edit i3status config file
   become: true
   lineinfile:
-    dest: /etc/i3status.conf
+    path: /etc/i3status.conf
     state: present
     regexp: '^order += "ipv6"'
     line: '#order += "ipv6"'
@@ -79,7 +79,7 @@
 - name: edit i3status config file
   become: true
   lineinfile:
-    dest: /etc/i3status.conf
+    path: /etc/i3status.conf
     state: present
     regexp: '^order += "wireless _first_'
     line: '#order += "wireless _first_'
@@ -87,7 +87,7 @@
 - name: edit i3status config file
   become: true
   lineinfile:
-    dest: /etc/i3status.conf
+    path: /etc/i3status.conf
     state: present
     regexp: '^order += "battery all"'
     line: '#order += "battery all"'
