--- a/roles/puppetmaster/tasks/configs.yml
+++ b/roles/puppetmaster/tasks/configs.yml
@@ -72,7 +72,7 @@
   become: true
   lineinfile:
     path: /etc/i3status.conf
-    state: present
+    # state: present
     regexp: '^order += "ipv6'
     line: '#order += "ipv6"'
 
@@ -80,14 +80,14 @@
   become: true
   lineinfile:
     path: /etc/i3status.conf
-    state: present
+    # state: present
     regexp: '^order += "wireless'
-    line: '#order += "wireless _first_'
+    line: '#order += "wireless _first_"'
 
 - name: edit i3status config file
   become: true
   lineinfile:
     path: /etc/i3status.conf
-    state: present
+    # state: present
     regexp: '^order += "battery'
     line: '#order += "battery all"'
