--- a/roles/puppetmaster/tasks/configs.yml
+++ b/roles/puppetmaster/tasks/configs.yml
@@ -73,21 +73,21 @@
   lineinfile:
     path: /etc/i3status.conf
     state: present
-    regexp: '^order += "ipv6"'
-    line: "#order += "ipv6""
+    search_string: 'order += "ipv6"'
+    line: '#order += "ipv6"'
 
 - name: edit i3status config file
   become: true
   lineinfile:
     path: /etc/i3status.conf
     state: present
-    regexp: '^order += "wireless"'
-    line: "#order += "wireless _first_""
+    search_string: 'order += "wireless _first_"'
+    line: '#order += "wireless _first_"'
 
 - name: edit i3status config file
   become: true
   lineinfile:
     path: /etc/i3status.conf
     state: present
-    regexp: '^order += "battery all"'
-    line: "#order += "battery all""
+    search_string: 'order += "battery all"'
+    line: '#order += "battery all"'
