--- a/roles/puppetmaster/tasks/configs.yml
+++ b/roles/puppetmaster/tasks/configs.yml
@@ -74,7 +74,7 @@
     path: /etc/i3status.conf
     state: present
     search_string: 'order += "ipv6"'
-    line: '#order += "ipv6"'
+    line: #order += "ipv6"
 
 - name: edit i3status config file
   become: true
@@ -82,7 +82,7 @@
     path: /etc/i3status.conf
     state: present
     search_string: 'order += "wireless _first_"'
-    line: '#order += "wireless _first_"'
+    line: #order += "wireless _first_"
 
 - name: edit i3status config file
   become: true
@@ -90,4 +90,4 @@
     path: /etc/i3status.conf
     state: present
     search_string: 'order += "battery all"'
-    line: '#order += "battery all"'
+    line: #order += "battery all"
