--- a/files/QuiteRss.ini
+++ b/files/QuiteRss.ini
@@ -119,7 +119,7 @@ curDownloadLocation=C:/Users/mhorne/Desktop
 dayClearUpOn=true
 defaultIconFeeds=false
 defaultZoomPages=100
-dirDiskCache=~/mh47577/.local/share/QuiteRss/QuiteRss/cache
+dirDiskCache=/home/mhorne/.local/share/QuiteRss/QuiteRss/cache
 downloadLocation=
 emptyWorking=true
 externalBrowser=
@@ -202,7 +202,7 @@ showUnreadCount=true
 simplifiedDateTime=true
 singleClickTray=false
 soundNewNews=false
-soundNotifyPath=C:/Program Files/QuiteRSS/sound/notification.wav
+soundNotifyPath=/usr/share/quiterss/sound/notification.wav
 startingTray=false
 statisticsEnabled=true
 statisticsEnabled2=true
@@ -210,13 +210,13 @@ statusBarShow=true
 stayOnTop=false
 storeDBMemory=true
 styleApplication=darkStyle_
-styleSheetNews=C:/Program Files/QuiteRSS/style/news.css
+styleSheetNews=/usr/share/quiterss/style/news.css
 timeShowNewsNotify=10
 timeoutRequest=15
 transparencyNotify=40
 updateCheckEnabled=true
 useDiskCache=true
-userStyleBrowser=C:/program files (x86)/quiterss/style/web_dark.css
+userStyleBrowser=/usr/share/quiterss/style/web_dark.css
 widthTitleNewsNotify=300
 
 [Shortcuts]
