--- a/roles/lubuntu/tasks/main.yml
+++ b/roles/lubuntu/tasks/main.yml
@@ -5,7 +5,7 @@
   - include_tasks: nala.yml
   - include_tasks: ../debian/tasks/oh-my-posh.yml
   - include_tasks: ../debian/tasks/zsh-alias.yml
-  - include_tasks: ../debian/tasks/btop.yml
+  # - include_tasks: ../debian/tasks/btop.yml
   - include_tasks: theme-config.yml
   # - include_tasks: xfconf.yml
   - include_tasks: tilix_config.yml
