--- a/roles/fedora/tasks/main.yml
+++ b/roles/fedora/tasks/main.yml
@@ -8,9 +8,9 @@
   - include_tasks: oh-my-posh.yml
   - include_tasks: tilix_config.yml
   - include_tasks: zsh-alias.yml
-  - include_tasks: moderndeck.yml
-  # - include_tasks: rainlendar.yml
-  - include_tasks: samba.yml
+  - include_tasks: poddr.yml
+  - include_tasks: rainlendar.yml
+  - include_tasks: audacious.yml
   - include_tasks: work.yml
-    when: work is defined
+    # when: work is defined
 
