--- a/roles/fedora/tasks/work.yml
+++ b/roles/fedora/tasks/work.yml
@@ -8,7 +8,7 @@
 - name: add Zoom repository
   tags: Zoom
   shell:
-    cmd: /home/{{ user }}/Downloads/rpm --import package-signing-key.pub
+    cmd: "/home/{{ user }}/Downloads/rpm --import package-signing-key.pub"
   args:
     executable: /bin/bash
 
@@ -17,6 +17,7 @@
     name:
       - zoom
       - openconnect
+      - '@virtualization'
     state: latest
 
 - name: install Teams
