--- a/roles/fedora/tasks/work.yml
+++ b/roles/fedora/tasks/work.yml
@@ -34,6 +34,10 @@
       - '@virtualization'
     state: latest
 
+- name: add libvirt group
+  command: 
+    cmd: usermod -aG libvirt $(whoami)
+
 - name: install Teams
   get_url:
     url: https://web.archive.org/web/20221130115736if_/https://packages.microsoft.com/yumrepos/ms-teams/teams-1.5.00.23861-1.x86_64.rpm
@@ -46,6 +50,3 @@
     name:
       - /home/{{ user }}/Downloads/teams-1.5.00.23861-1.x86_64.rpm
     state: present
-
-
-
