--- a/roles/base/tasks/packages.yml
+++ b/roles/base/tasks/packages.yml
@@ -72,6 +72,20 @@
     state: present
   when: ansible_distribution == "Fedora"
 
+- name: install docker
+  tags: fedora,base,docker
+  dnf:
+    name:
+      - docker-ce    
+      - docker-ce-cli
+      - containerd.io
+      - docker-buildx-plugin
+      - docker-compose-plugin
+    enablerepo: https://download.docker.com/linux/fedora/docker-ce.repo
+    state: present
+  when: ansible_distribution == "Fedora"
+
+
 - name: install Void and Arch packages
   tags: void,arch
   package:
