--- a/roles/fedora/tasks/work.yml
+++ b/roles/fedora/tasks/work.yml
@@ -45,8 +45,8 @@
   #   owner: "{{ user }}"
   #   group: "{{ user }}"
 
-- name: install Teams
-  dnf:
-    name: 'https://web.archive.org/web/20221130115736if_/https://packages.microsoft.com/yumrepos/ms-teams/teams-1.5.00.23861-1.x86_64.rpm'
-    state: present
-    disable_gpg_check: true
+# - name: install Teams
+#   dnf:
+#     name: 'https://web.archive.org/web/20221130115736if_/https://packages.microsoft.com/yumrepos/ms-teams/teams-1.5.00.23861-1.x86_64.rpm'
+#     state: present
+#     disable_gpg_check: true
