--- a/roles/base/tasks/packages.yml
+++ b/roles/base/tasks/packages.yml
@@ -72,6 +72,10 @@
     state: present
   when: ansible_distribution == "Fedora"
 
+- name: add docker repo
+  command: dnf config-manager --add-repo https://download.docker.com/linux/fedora/docker-ce.repo
+
+
 - name: install docker
   tags: fedora,base,docker
   dnf:
@@ -81,7 +85,6 @@
       - containerd.io
       - docker-buildx-plugin
       - docker-compose-plugin
-    enablerepo: https://download.docker.com/linux/fedora/docker-ce.repo
     state: present
   when: ansible_distribution == "Fedora"
 
